[package]
name = "example_package"
version = "0.1.0"
edition = "2021"

[dependencies]
# Example uses rosbridge backend, but any could be substituted in
# We do need the codegen feature as the types that are generated in build.rs require types from codegen
roslibrust = { path = "../roslibrust", features = ["rosbridge", "codegen"] }
tokio = { version = "1.42", features = ["sync", "macros"] }

[dev-dependencies]
# Tests use the mock backend from roslibrust
roslibrust = { path = "../roslibrust", features = ["mock"] }
# Tests also use test-util to pause time
tokio = { version = "1.42", features = ["test-util"] }

[build-dependencies]
# We depend on codegen as a build dependency as we invoke it in build.rs
roslibrust = { path = "../roslibrust", features = ["codegen"] }
# This crate is very helpful for build.rs files but not required
cargo-emit = "0.2"