[package]
name = "example_package_macro"
version = "0.1.0"
edition = "2021"

[dependencies]
# We're depending on the macro feature (which will also provide codegen transitively)
# and the mock backend so we can test our node
roslibrust = { path = "../roslibrust", features = ["macro", "rosbridge"] }
tokio = { version = "1.42", features = ["sync", "macros"] }

[dev-dependencies]
# For tests we need to macro still, and the mock backend
roslibrust = { path = "../roslibrust", features = ["macro", "mock"] }
# We use test-util to pause time in our test
tokio = { version = "1.42", features = ["test-util"] }
