[package]
name = "roslibrust"
version = "0.14.0"
authors = ["carter <carterjschultz@gmail.com>", "ssnover <ssnover95@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "An library for interfacing with the ROS's rosbridge_server"
repository = "https://github.com/roslibrust/roslibrust"
keywords = ["ROS", "robotics", "websocket", "json", "async"]
categories = ["science::robotics"]

[dependencies]
roslibrust_common = { path = "../roslibrust_common", version = "0.14" }
roslibrust_ros1 = { path = "../roslibrust_ros1", version = "0.14", optional = true }
roslibrust_rosbridge = { path = "../roslibrust_rosbridge", version = "0.14", optional = true }
roslibrust_zenoh = { path = "../roslibrust_zenoh", version = "0.14", optional = true }
roslibrust_mock = { path = "../roslibrust_mock", version = "0.14", optional = true }
roslibrust_codegen = { path = "../roslibrust_codegen", version = "0.14", optional = true }
roslibrust_codegen_macro = { path = "../roslibrust_codegen_macro", version = "0.14", optional = true }

[dev-dependencies]
env_logger = "0.11"
test-log = { workspace = true }
abort-on-drop = "0.2"
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
# Used to generate messages for the examples
roslibrust_codegen = { path = "../roslibrust_codegen" }
roslibrust_codegen_macro = { path = "../roslibrust_codegen_macro" }
# Slightly weird, but used in documentation examples
roslibrust_test = { path = "../roslibrust_test" }
# Slightly weird, but used in documentation examples
zenoh = "1.0"

[features]
# default feature is pure traits only with no implementations
default = []
# `all` enables all "useful" features to end users, other features are for testing purposes
all = ["codegen", "macro", "ros1", "rosbridge", "zenoh", "mock"]
# Provides a ros1 xmlrpc / TCPROS client
ros1 = ["roslibrust_ros1"]
# Provides a backend using the rosbridge websocket protocol
rosbridge = ["roslibrust_rosbridge"]
# Provides a backend using zenoh's ros1 format from zenoh-bridge-ros1
zenoh = ["roslibrust_zenoh"]
# Provides a mock backend useful for writing tests around nodes
mock = ["roslibrust_mock"]
# Provides a macro for generating types from ROS messages
codegen = ["roslibrust_codegen"]
# Provides macros for generating types from ROS messages
macro = ["roslibrust_codegen_macro", "codegen"]
## Features below here are for testing purposes
# Intended for use with tests, includes tests that rely on a locally running rosbridge
running_bridge = []
# For use with integration tests, indicating we are testing integration with a ros1 bridge
ros1_test = ["running_bridge", "ros1"]
# For use with integration tests, indicates we are testing integration with a ros2 bridge
ros2_test = ["running_bridge"]

[package.metadata.docs.rs]
features = ["all"]
