[package]
name = "roslibrust_common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Used for error handling
thiserror = "2.0"
anyhow = "1.0"
# Used as basis for serialization
serde = { workspace = true }
# Used for md5sum calculation
md5 = "0.7"
# Used for async trait definitions
futures = "0.3"
