[package]
name = "roslibrust_mock"
version = "0.1.0"
edition = "2021"

[dependencies]
roslibrust_common = { path = "../roslibrust_common" }
tokio = { workspace = true }
# Used for serializing messages
bincode = "1.3"
# We add logging to aid in debugging tests
log = { workspace = true }

[dev-dependencies]
# Used for message definitions in tests
roslibrust_test = { path = "../roslibrust_test" }
