[package]
name = "roslibrust_mock"
version = "0.12.0"
edition = "2021"
authors = [ "carter <carterjschultz@gmail.com>" ]
license = "MIT"
description = "Mock implementation of roslibrust's generic traits useful for testing ROS behaviors."
repository = "https://github.com/roslibrust/roslibrust"
categories = ["science::robotics"]


[dependencies]
roslibrust_common = { path = "../roslibrust_common", version = "0.12.0" }
tokio = { workspace = true }
# Used for serializing messages
bincode = "1.3"
# We add logging to aid in debugging tests
log = { workspace = true }

[dev-dependencies]
# Used for message definitions in tests
roslibrust_test = { path = "../roslibrust_test" }
