[package]
name = "roslibrust_rosapi"
version = "0.1.0"
edition = "2021"

[dependencies]
roslibrust = { path = "../roslibrust", features = ["macro"] }

[dev-dependencies]
roslibrust = { path = "../roslibrust", features = ["rosbridge"] }
tokio = { workspace = true }
test-log = { workspace = true }

[features]
# Used to indicate we're executing tests with a running ros1 rosapi node
ros1_test = []