[package]
name = "roslibrust_zenoh"
version = "0.12.0"
edition = "2021"
authors = [ "carter <carterjschultz@gmail.com>" ]
license = "MIT"
description = "A zenoh backend for roslibrust compatible with zenoh-ros1-plugin / zenoh-ros1-bridge."
repository = "https://github.com/roslibrust/roslibrust"
categories = ["science::robotics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roslibrust_serde_rosmsg = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
roslibrust_common = { path = "../roslibrust_common", version = "0.12" }
zenoh = "1.0"
hex = "0.4"
anyhow = "1.0"

[dev-dependencies]
env_logger = "0.11"
# Used to access traits for examples
roslibrust = { path = "../roslibrust" }
# Used to generate message types for the examples
roslibrust_codegen_macro = { path = "../roslibrust_codegen_macro" }
# Relied on by generate types in the macro this should be cleaned up
roslibrust_codegen = { path = "../roslibrust_codegen" }
